5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1747_3089.log
== TEST (2019-05-16 10:20:23) 
-- CODE:
#direita=positivo
#esquerda=negativo
#numero demovimento
#finaliza quando for 0
#imprimir esquerda ou direita
#somatorio
n=int(input())
i=0
s=0
while(n!=0):
	s=s+n
	i=i+1
	n=int(input())
if(s=0):
	print(s)
	print("Inicial")
elif(s>0):
	print(s)
	print("Direita")
else:
	print(s)
	print("Esquerda")
-- ERROR:
File "XXXX", line 14
    if(s=0):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:20:41) 
-- CODE:
#direita=positivo
#esquerda=negativo
#numero demovimento
#finaliza quando for 0
#imprimir esquerda ou direita
#somatorio
n=int(input())
i=0
s=0
while(n!=0):
	s=s+n
	i=i+1
	n=int(input())
if(s==0):
	print(s)
	print("Inicial")
elif(s>0):
	print(s)
	print("Direita")
else:
	print(s)
	print("Esquerda")
-- OUTPUT:
12
Direita
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:20:45) 
-- CODE:
#direita=positivo
#esquerda=negativo
#numero demovimento
#finaliza quando for 0
#imprimir esquerda ou direita
#somatorio
n=int(input())
i=0
s=0
while(n!=0):
	s=s+n
	i=i+1
	n=int(input())
if(s==0):
	print(s)
	print("Inicial")
elif(s>0):
	print(s)
	print("Direita")
else:
	print(s)
	print("Esquerda")
-- EXECUTION TIME:
0.199701
-- TEST CASE 1:
---- input:
1
2
1
2
1
2
1
2
0
---- correct output:
12
Direita
---- user output:
12
Direita
-- TEST CASE 2:
---- input:
-1
-2
-3
-4
-5
-6
-7
0
---- correct output:
-28
Esquerda
---- user output:
-28
Esquerda
-- TEST CASE 3:
---- input:
10
-5
5
-10
0
---- correct output:
0
Inicial
---- user output:
0
Inicial
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:25:06) 
-- CODE:
#direita=positivo
#esquerda=negativo
#numero demovimento
#finaliza quando for 0
#imprimir esquerda ou direita
#somatorio
n=int(input())
i=0
s=0
while(n!=0):
	s=s+n
	i=i+1
	n=int(input())
if(s==0):
	print(s)
	print("Inicial")
elif(s>0):
	print(s)
	print("Direita")
else:
	print(s)
	print("Esquerda")
-- OUTPUT:
12
Direita
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
